--- a/widgets/worldclock/worldclock.scss
+++ b/widgets/worldclock/worldclock.scss
@@ -25,7 +25,7 @@ THE SOFTWARE.
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #DA8537;
+$background-color:  #dc5945;
 
 // ----------------------------------------------------------------------------
 // Widget-clock styles
