--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -6,6 +6,20 @@
       <i class="icon-github icon-background"></i>
     </li>
 
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="weather" data-view="Weather"></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-view="Clock"></div>
+      <i class="icon-time icon-background"></i>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="sebastopol" data-view="Worldclock" data-timezone="America/New_York" data-title="Boston/Toronto"></div>
+      <i class="icon-time icon-background"></i>
+    </li>
+
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Hello" data-text="This is your shiny new dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
