--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -7,6 +7,10 @@
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="bitcoin" data-view="Number" data-title="BTC" data-prefix="$"></div>
+    </li>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="weather" data-view="Weather"></div>
     </li>
 
